# web/static/swagger.yaml
@@ -76,6 +76,24 @@ paths:
               application/json:
                 schema:
                   $ref: '#/components/schemas/ChatResponse'
+      /private/search:
+        post:
+          tags:
+            - Private
+          summary: Search private info
+          requestBody:
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/ChatRequest'
+            required: true
+          responses:
+            '200':
+              description: Successful response
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/ChatResponse'
 components:
   schemas:
     ChatRequest:
